--- a/front/portfolio/index.html
+++ b/front/portfolio/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="" rel="icon">
+    <link href="../dest/images/favico.png" rel="icon">
 
     <meta name="keywords" content="...">
     <meta name="description" content="desc">
@@ -38,82 +38,11 @@
         <div class="container">
           <h1 class="portfolio__header">Роботи</h1>
           <div class="portfolio__items">
-            <!-- <div class="portfolio__item">
-              <a href="#popup" class="portfolio__link">
-                <img class="portfolio__image" id="1" src="../dest/images/default-background.webp" alt="portfolio-item">
-                <span class="portfolio__details" id="desc1">Дивитися</span>
-                <span class="portfolio__id" hidden id="itemID1"></span>
-              </a>
-            </div>
-            <div class="portfolio__item">
-              <a href="#popup" class="portfolio__link">
-                <img id="2" src="../dest/images/default-background.webp" alt="portfolio-item">
-                <span class="portfolio__details" id="desc2">Дивитися</span>
-                <span class="portfolio__id" id="itemID2" hidden></span>
-              </a>
-            </div>
-            <div class="portfolio__item">
-              <a href="#popup" class="portfolio__link">
-                <img id="3" src="../dest/images/default-background.webp" alt="portfolio-item">
-                <span class="portfolio__details" id="desc3">Дивитися</span>
-                <span class="portfolio__id" id="itemID3" hidden></span>
-              </a>
-            </div>
-            <div class="portfolio__item">
-              <a href="#popup" class="portfolio__link">
-                <img id="4" src="../dest/images/default-background.webp" alt="portfolio-item">
-                <span class="portfolio__details" id="desc4">Дивитися</span>
-                <span class="portfolio__id" id="itemID4" hidden></span>
-              </a>
-            </div>
-            <div class="portfolio__item">
-              <a href="#popup" class="portfolio__link">
-                <img id="5" src="../dest/images/default-background.webp" alt="portfolio-item">
-                <span class="portfolio__details" id="desc5">Дивитися</span>
-                <span class="portfolio__id" id="itemID5" hidden></span>
-              </a>
-            </div>
-            <div class="portfolio__item">
-              <a href="#popup" class="portfolio__link">
-                <img id="6" src="../dest/images/default-background.webp" alt="portfolio-item">
-                <span class="portfolio__details" id="desc6">Дивитися</span>
-                <span class="portfolio__id" id="itemID6" hidden></span>
-              </a>
-            </div>
-            <div class="portfolio__item">
-              <a href="#popup" class="portfolio__link">
-                <img id="7" src="../dest/images/default-background.webp" alt="portfolio-item">
-                <span class="portfolio__details" id="desc7">Дивитися</span>
-                <span class="portfolio__id" id="itemID7" hidden></span>
-              </a>
-            </div>
-            <div class="portfolio__item">
-              <a href="#popup" class="portfolio__link">
-                <img id="8" src="../dest/images/default-background.webp" alt="portfolio-item">
-                <span class="portfolio__details" id="desc8">Дивитися</span>
-                <span class="portfolio__id" id="itemID8" hidden></span>
-              </a>
-            </div>
-            <div class="portfolio__item">
-              <a href="#popup" class="portfolio__link">
-                <img id="9" src="../dest/images/default-background.webp" alt="portfolio-item">
-                <span class="portfolio__details" id="desc9">Дивитися</span>
-                <span class="portfolio__id" id="itemID9" hidden></span>
-              </a>
-            </div> -->
           </div>
         </div>
       </section>
-      <section class="pagination">
+      <section class="pagination-section">
         <div class="pagination">
-          <a id="prev" href="">&laquo;</a>
-          <a class="active" href="#">1</a>
-          <a href="#">2</a>
-          <a href="#">3</a>
-          <a href="#">4</a>
-          <a href="#">5</a>
-          <a href="#">6</a>
-          <a id="next" href="#here">&raquo;</a>
         </div>
       </section>
 
@@ -126,8 +55,8 @@
     </footer>
     <script src="../dest/js/portfolio.js"></script>
     <script src="../dest/js/loadParts.js"></script>
+    <script src="../dest/js/checkUser.js"></script>
     <script src="../dest/js/app.js"></script>
-    <script src="../dest/js/user.js"></script>
   </body>
 
 </html>
