--- a/front/index.html
+++ b/front/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="" rel="icon">
+    <link href="dest/images/favico.png" rel="icon">
 
     <meta name="keywords" content="...">
     <meta name="description" content="desc">
@@ -196,7 +196,7 @@
     <footer class="footer" include-html="templates/main-footer.html"></footer>
     <script src="dest/js/loadParts.js"></script>
     <script src="dest/js/app.js"></script>
-    <script src="dest/js/user.js"></script>
+    <script src="dest/js/checkUser.js"></script>
   </body>
 
 </html>
