--- a/front/login/index.html
+++ b/front/login/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="" rel="icon">
+    <link href="../dest/images/favico.png" rel="icon">
 
     <meta name="keywords" content="...">
     <meta name="description" content="desc">
