--- a/front/user/add-work/index.html
+++ b/front/user/add-work/index.html
@@ -35,11 +35,16 @@
           <textarea class="work__description work-input" id="work-description" name="work-description"
             placeholder="Опис роботи"></textarea>
           <label class="work__lable" for="logo">Картинки</label>
+
           <input class="file__button" id="logo" type="file" hidden>
           <div class="work__image" id="dropZone">
             Для завантаження натисніть, або перетягніть файл сюди
           </div>
           <div class="image__field">
+          </div>
+          <div class="work__image-errors">
+            <ul class="work__image-error">
+            </ul>
           </div>
           <input class="work__submit work-button" type="submit" value="Надіслати">
         </form>
