--- a/front/user/edit-work/index.html
+++ b/front/user/edit-work/index.html
@@ -42,6 +42,10 @@
           </div>
           <div class="image__field">
           </div>
+          <div class="work__image-errors">
+            <ul class="work__image-error">
+            </ul>
+          </div>
           <input class="work__submit work-button" type="submit" value="Надіслати">
         </form>
       </div>
