--- a/front/user/index.html
+++ b/front/user/index.html
@@ -35,13 +35,54 @@
       <div class="container">
         <div class="user__content">
           <section class="user-information">
-            <div class="user-information__img">
-              <img src="../dest/images/default-background.webp" alt="user-image">
+            <div class="user-information__data active">
+              <div class="user-information__img">
+                <img id="user-information-image" src="" alt="user-image">
+              </div>
+              <span class="user-information__name" id="name"></span>
+              <span class="user-information__email" id="email"></span>
+              <span class="user-information__created-at" id="created-at"></span>
+              <div class="edit-success-field">
+                <ul class="success-list">
+                </ul>
+              </div>
+              <div class="user-information__buttons">
+                <button class="user-information__button logout-button">Вийти</button>
+                <button class="user-information__button edit-button">Редагувати</button>
+              </div>
             </div>
-            <span class="user-information__name" id="name"></span>
-            <span class="user-information__email" id="email"></span>
-            <span class="user-information__created-at" id="created-at"></span>
+            <div class="user-information__edit">
+              <form class="user-information__form">
+                <label class="edit-lable" for="user-image">Фото</label>
+                <div class="user-image">
+                  <div class="image-preview">
+                    <img id="previev-image" src="" alt="image">
+                  </div>
+                  <button class="user-set-image">
+                    <input class="image-input" id="user-image" type="file">
+                    <img src="/front/dest/images/photo-camera-svgrepo-com.svg" alt="select">
+                  </button>
+                </div>
+                <label class="edit-lable" for="username">Ім'я</label>
+                <input class="user-informaion__input edit-ipnut" id="username" type="text">
+                <label class="edit-lable" for="useremail">Пошта</label>
+                <input class="user-informaion__input  edit-ipnut" id="useremail" type="email">
+                <label class="edit-lable" for="old-password">Старий пароль</label>
+                <input class="user-informaion__input edit-ipnut" id="old-password" type="password">
+                <label class="edit-lable" for="new-password">Новий пароль</label>
+                <input class="user-informaion__input  edit-ipnut" id="new-password" type="password">
+                <div class="edit-error-field">
+                  <ul class="error-list">
+                  </ul>
+                </div>
+                <div class="edit-action-buttons">
+                  <input class="edit-action-button" id="save-change" type="submit" value="Зберегти">
+                  <button class="edit-action-button" id="cancel-button">Назад</button>
+                </div>
+              </form>
+            </div>
           </section>
+
 
           <section class="user-works">
             <div class="works__choice">
