--- a/front/portfolio/index.html
+++ b/front/portfolio/index.html
@@ -46,7 +46,7 @@
         </div>
       </section>
 
-      <div id="popup" class="popup">
+      <div class="popup" id="popup">
       </div>
     </main>
 
